fixed paragraph shifting in display by adding min height :) yay!!!

--- a/style.css
+++ b/style.css
@@ -94,5 +94,6 @@ button:active {
     text-align: right;
     font-size: 1.0em;
     border:none;
+    min-height: 20px;
 }
 
